# src/controller/user.controller.ts
@@ -3,7 +3,6 @@ import { UserService } from "../service/user.service";
 import { UserMapper } from "../mapper/user.mapper";
 
 export class UserController {
-
   constructor(private readonly service = new UserService()) {}
 
   getUsers = async (req: Request, res: Response, next: NextFunction) => {
@@ -12,7 +11,7 @@ export class UserController {
       const pageSize = req.query.pageSize ? Number(req.query.pageSize) : 10;
 
       const result = await this.service.getAllUsers(
-        UserMapper.toUserRequestToFilterDto(req),
+        UserMapper.fromUserRequestToFilterDto(req),
         page,
         pageSize
       );
@@ -24,45 +23,63 @@ export class UserController {
     }
   };
 
-  getUserById = async (req: Request, res: Response, next: NextFunction) => {
-    const { id } = req.params;
-    try {
-      const user = await this.service.getUserById(BigInt(id));
-      return res.status(200).json(user);
-    } catch (err) {
-      next(err);
-    }
-  };
 
-  createUser = async (req: Request, res:Response, next: NextFunction) => {
+  createUser = async (req: Request, res: Response, next: NextFunction) => {
     const userData = req.body;
 
     try {
       const newUser = await this.service.createUser(userData);
       res.status(201).json(newUser);
     } catch (error) {
-      next(error)
+      next(error);
     }
-  }
+  };
 
-  updateUser = async (req: Request, res: Response, next: NextFunction) => {
+
+  getUserById = async (req: Request, res: Response, next: NextFunction) => {
     const { id } = req.params;
     try {
-      const updatedUser = await this.service.updateUser(BigInt(id), req.body);
+      const user = await this.service.getUserById(UserMapper.convertId(id));
+      return res.status(200).json(user);
+    } catch (err) {
+      next(err);
+    }
+  };
+
+  updateUserById = async (req: Request, res: Response, next: NextFunction) => {
+    const { id } = req.params;
+    try {
+      const updatedUser = await this.service.updateUser(
+        UserMapper.convertId(id),
+        UserMapper.fromUserUpdateRequestToDto(req.body)
+      );
       res.status(200).json(updatedUser);
     } catch (error) {
       next(error);
     }
-  }
+  };
 
-  deleteUser = async (req: Request, res: Response, next: NextFunction) => {
+  patchUserById = async (req: Request, res: Response, next: NextFunction) => {
     const { id } = req.params;
     try {
-      await this.service.deleteUser(BigInt(id));
+      const updatedUser = await this.service.patchUser(
+        UserMapper.convertId(id),
+        UserMapper.fromUserPatchRequestToDto(req.body)
+      );
+      res.status(200).json(updatedUser);
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  deleteUserById = async (req: Request, res: Response, next: NextFunction) => {
+    const { id } = req.params;
+    try {
+      await this.service.deleteUser(UserMapper.convertId(id));
       res.status(204).send();
     } catch (error) {
       next(error);
     }
-  } 
- 
+  };
+
 }
