# src/shared/dto/user.filter.dto.ts
@@ -1,8 +1,0 @@
-import type { UserRole } from "@prisma/client";
-
-export type UserFilter = {
-  email?: string;
-  role?: UserRole;
-  isEnabled?: boolean;
-  q?: string;
-};
